# rust-clap-nested-commands

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  devbox.json
examples/async_commands/: main.rs
examples/async_commands/commands/project/: mod.rs
examples/async_commands/commands/project/task/: add.rs  mod.rs  remove.rs
examples/async_commands/commands/project/user/: add.rs  mod.rs  remove.rs
examples/async_commands_with_return_type/: cli_context.rs  main.rs
examples/async_commands_with_return_type/commands/: mod.rs
examples/async_commands_with_return_type/commands/project/: mod.rs
examples/async_commands_with_return_type/commands/project/task/: add.rs  mod.rs  remove.rs
examples/async_commands_with_return_type/commands/project/user/: add.rs  mod.rs  remove.rs
examples/sync_commands/: main.rs
examples/sync_commands/commands/project/: mod.rs
examples/sync_commands/commands/project/task/: add.rs  mod.rs  remove.rs
examples/sync_commands/commands/project/user/: add.rs  mod.rs  remove.rs
examples/sync_commands_with_return_type/: main.rs
examples/sync_commands_with_return_type/commands/project/: mod.rs
examples/sync_commands_with_return_type/commands/project/task/: add.rs  mod.rs  remove.rs
examples/sync_commands_with_return_type/commands/project/user/: add.rs  mod.rs  remove.rs
src/: async_commands.rs  lib.rs  sync_commands.rs
