[package]
name = "clap-nested-commands"
version = "0.1.0"
categories = ["command-line-interface"]
description = "Rust macros to automate the definitions for nested commands in a clap CLI"
documentation = "https://github.com/mootoday/rust-clap-nested-commands"
edition = "2021"
homepage = "https://github.com/mootoday/rust-clap-nested-commands"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["cli", "clap", "nested", "commands"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mootoday/rust-clap-nested-commands"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
paste = "1.0.14"
tokio = { version = "1.36.0", features = ["full"] }

[lib]
path = "src/lib.rs"
